css fix. New topic is no longer hidden under the top bar

--- a/static/topics_styles.css
+++ b/static/topics_styles.css
@@ -6,6 +6,10 @@
 
 }
 
+.topics {
+    margin-top: 450px;
+}
+
 .side-bar {
     position: fixed;
     top: 330px;
